// Copyright © 2020-present ichenq@outlook.com All rights reserved.
// Distributed under the terms and conditions of the BSD License.
// See accompanying files LICENSE.

syntax = "proto3";
package protocol;

import "gogoproto/gogo.proto";
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_unkeyed_all)      = false;
option (gogoproto.goproto_sizecache_all)    = false;

import "internal_struct.proto";

// 注册节点
message RegisterReq {
  string access_token = 1; // 认证token
  uint32 node         = 2; // 节点编号
}

message RegisterAck {
  uint32 node = 2; // 返回节点号
}

// 节点状态变化通知
message InstanceStateNtf {
  NodeState state       = 1;
  repeated uint32 peers = 2;
}

// 心跳
message KeepAliveReq {
  int64 time = 1;
  int64 load = 2;
}

message KeepAliveAck { int64 time = 1; }

// 订阅消息处理
message SubscribeReq {
  int32 msg_start = 1;
  int32 msg_end   = 2;
}

message SubscribeAck {}

// 转发消息
message ForwardMsg {
  uint32 node    = 1; // 目标节点
  uint32 msg_id  = 3; // 消息ID
  bytes msg_data = 4; // 消息内容
}

// 组播消息
message MulticastMsg {
  repeated uint32 nodes = 1; // 指定节点ID
  uint32 msg_id         = 2; // 转发消息ID
  bytes msg_data        = 3; // 转发消息内容
}

// RPC请求
message RpcRequest {
  uint32 id      = 1; // unique request id
  uint32 msg_id  = 2; // rpc消息ID
  bytes msg_data = 3; // rpc消息内容
}

// RPC响应
message RpcResponse {
  uint32 id      = 1; // same id as the request it is responding to.
  uint32 error   = 2; // 错误码
  uint32 msg_id  = 4; // rpc消息ID
  bytes msg_data = 5; // rpc消息内容
}